[package]
name = "slmp"
license = "MIT"
authors = ["DigitalServo"]
description = "Library for Seamless Message Protocol (SLMP)　communication"
version = "0.1.12"
edition = "2024"

[features]
default = []
json-api = []

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
